# Up

./: .gitignore  README.md  pyproject.toml  score.txt
.github/workflows/: qa.yml
src/: cube.py  generator_example.py  main.py
